--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       <load src="./partials/header.html" title="Bienvenidos a invite ME!" />
       <load src="./partials/main.html" />
       <load src="./partials/footer.html" />
+      <load src="./partials/form.html" />
     </div>
     <script src="./js/main.js"></script>
   </body>
