añadida estrcutura de archivos de preoview

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       <load src="./partials/main.html" />
       <load src="./partials/footer.html" />
       <load src="./partials/form.html" />
+      <load src="./partials/preview.html" />
     </div>
     <script src="./js/main.js"></script>
   </body>
