--- a/src/design.html
+++ b/src/design.html
@@ -17,9 +17,10 @@
     <div class="page">
       <load src="./partials/header.html" title="Bienvenidos a invite ME!" />
       <load src="./partials/form.html" />
+      <load src="./partials/create-button.html" />
       <load src="./partials/preview.html" />
       <load src="./partials/footer.html" />
     </div>
-    <script src="./js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
