--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,8 @@
     <div class="page">
       <load src="./partials/header.html" title="Bienvenidos a invite ME!" />
       <load src="./partials/main.html" />
-
       <load src="./partials/footer.html" />
     </div>
-    <script src="./js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
